crates/vox-integration-tests/tests/snapshots/codegen_rust_test__activity_canonical_fn_output.snap
---
source: crates/vox-integration-tests/tests/codegen_rust_test.rs
expression: output
---
use serde::{Serialize, Deserialize};

pub fn as_string<T: serde::Serialize>(v: &T) -> String {
    let val = serde_json::to_value(v).expect("vox codegen: serde_json::to_value failed");
    if let Some(s) = val.as_str() { s.to_string() } else { val.to_string() }
}

fn do_work(input: String, ) -> String {
    return input.clone();
}

fn main() -> String {
    let result = do_work.clone()("test".to_string());
    return result.clone();
}
