crates/vox-integration-tests/tests/snapshots/codegen_rust_test__mcp_resource_server_output.snap
---
source: crates/vox-integration-tests/tests/codegen_rust_test.rs
expression: mcp
---
// MCP Server — Generated by Vox Compiler
// Implements the Model Context Protocol (JSON-RPC 2.0 over stdio)

use serde_json::{json, Value};
use std::io::{self, BufRead, Write};
use with_res::*;

fn dispatch_tool(name: &str, args: &Value) -> Result<Value, String> {
    match name {
        _ => Err(format!("Unknown tool: {}", name)),
    }
}

fn tool_list() -> Value {
    json!({
        "tools": [
        ]
    })
}

// Resource dispatch (nullary fns only; URI match)
fn dispatch_resource(uri: &str) -> Result<Value, String> {
    match uri {
        "demo://x" => {
            let result = demo_res();
            Ok(serde_json::to_value(result).unwrap_or(Value::Null))
        }
        _ => Err(format!("Unknown resource URI: {}", uri)),
    }
}

fn resource_list() -> Value {
    json!({
        "resources": [
            {
                "uri": "demo://x",
                "name": "demo_res",
                "description": "A demo resource",
                "mimeType": "text/plain"
            }
        ]
    })
}

fn main() {
    let stdin = io::stdin();
    let mut stdout = io::stdout();
    for line in stdin.lock().lines() {
        let line = match line {
            Ok(l) => l,
            Err(_) => break,
        };
        if line.trim().is_empty() { continue; }
        let request: Value = match serde_json::from_str(&line) {
            Ok(v) => v,
            Err(e) => {
                let err = json!({
                    "jsonrpc": "2.0",
                    "error": { "code": -32700, "message": format!("Parse error: {e}") },
                    "id": null
                });
                writeln!(stdout, "{}", err).ok();
                stdout.flush().ok();
                continue;
            }
        };
        let id = request.get("id").cloned().unwrap_or(Value::Null);
        let method = request.get("method").and_then(|m| m.as_str()).unwrap_or("");
        let params = request.get("params").cloned().unwrap_or(json!({}));

        let response = match method {
            "initialize" => json!({
                "jsonrpc": "2.0",
                "id": id,
                "result": {
                    "protocolVersion": "2024-11-05",
                    "capabilities": { "tools": {}, "resources": { "subscribe": false } },
                    "serverInfo": { "name": "with_res", "version": "0.1.0" }
                }
            }),
            "tools/list" => {
                let tools = tool_list();
                json!({
                    "jsonrpc": "2.0",
                    "id": id,
                    "result": tools
                })
            },
            "tools/call" => {
                let tool_name = params.get("name").and_then(|n| n.as_str()).unwrap_or("");
                let tool_args = params.get("arguments").cloned().unwrap_or(json!({}));
                match dispatch_tool(tool_name, &tool_args) {
                    Ok(result) => json!({
                        "jsonrpc": "2.0",
                        "id": id,
                        "result": {
                            "content": [{ "type": "text", "text": serde_json::to_string(&result).unwrap_or_default() }]
                        }
                    }),
                    Err(e) => json!({
                        "jsonrpc": "2.0",
                        "id": id,
                        "result": {
                            "isError": true,
                            "content": [{ "type": "text", "text": e }]
                        }
                    }),
                }
            },
            "resources/list" => {
                let r = resource_list();
                json!({
                    "jsonrpc": "2.0",
                    "id": id,
                    "result": r
                })
            },
            "resources/read" => {
                let uri = params.get("uri").and_then(|u| u.as_str()).unwrap_or("");
                match dispatch_resource(uri) {
                    Ok(val) => {
                        let text = serde_json::to_string(&val).unwrap_or_default();
                        json!({
                            "jsonrpc": "2.0",
                            "id": id,
                            "result": {
                                "contents": [{ "uri": uri, "mimeType": "text/plain", "text": text }]
                            }
                        })
                    }
                    Err(e) => json!({
                        "jsonrpc": "2.0",
                        "id": id,
                        "error": { "code": -32602, "message": e }
                    }),
                }
            },
            "notifications/initialized" | "notifications/cancelled" => continue,
            _ => json!({
                "jsonrpc": "2.0",
                "id": id,
                "error": { "code": -32601, "message": format!("Method not found: {}", method) }
            }),
        };

        writeln!(stdout, "{}", response).ok();
        stdout.flush().ok();
    }
}
