crates/vox-integration-tests/tests/snapshots/codegen_rust_test__mcp_server_multi_tool_schema_output.snap
---
source: crates/vox-integration-tests/tests/codegen_rust_test.rs
expression: mcp
---
// MCP Server — Generated by Vox Compiler
// Implements the Model Context Protocol (JSON-RPC 2.0 over stdio)

use serde_json::{json, Value};
use std::io::{self, BufRead, Write};
use my_tools::*;

fn dispatch_tool(name: &str, args: &Value) -> Result<Value, String> {
    match name {
        "add" => {
            let a = args.get("a").cloned().unwrap_or(Value::Null);
            let b = args.get("b").cloned().unwrap_or(Value::Null);
            let result = add(a.as_i64().unwrap_or(0), b.as_i64().unwrap_or(0));
            Ok(serde_json::to_value(result).unwrap_or(Value::Null))
        }
        "greet" => {
            let name = args.get("name").cloned().unwrap_or(Value::Null);
            let result = greet(name.as_str().unwrap_or_default().to_string());
            Ok(serde_json::to_value(result).unwrap_or(Value::Null))
        }
        _ => Err(format!("Unknown tool: {}", name)),
    }
}

fn tool_list() -> Value {
    json!({
        "tools": [
            {
                "name": "add",
                "description": "Add two numbers",
                "inputSchema": {
                    "type": "object",
                    "properties": {
                        "a": { "type": "integer" },
                        "b": { "type": "integer" }
                    },
                    "required": ["a", "b"]
                }
            },
            {
                "name": "greet",
                "description": "Greet someone",
                "inputSchema": {
                    "type": "object",
                    "properties": {
                        "name": { "type": "string" }
                    },
                    "required": ["name"]
                }
            }
        ]
    })
}

fn main() {
    let stdin = io::stdin();
    let mut stdout = io::stdout();
    for line in stdin.lock().lines() {
        let line = match line {
            Ok(l) => l,
            Err(_) => break,
        };
        if line.trim().is_empty() { continue; }
        let request: Value = match serde_json::from_str(&line) {
            Ok(v) => v,
            Err(e) => {
                let err = json!({
                    "jsonrpc": "2.0",
                    "error": { "code": -32700, "message": format!("Parse error: {e}") },
                    "id": null
                });
                writeln!(stdout, "{}", err).ok();
                stdout.flush().ok();
                continue;
            }
        };
        let id = request.get("id").cloned().unwrap_or(Value::Null);
        let method = request.get("method").and_then(|m| m.as_str()).unwrap_or("");
        let params = request.get("params").cloned().unwrap_or(json!({}));

        let response = match method {
            "initialize" => json!({
                "jsonrpc": "2.0",
                "id": id,
                "result": {
                    "protocolVersion": "2024-11-05",
                    "capabilities": { "tools": {} },
                    "serverInfo": { "name": "my_tools", "version": "0.1.0" }
                }
            }),
            "tools/list" => {
                let tools = tool_list();
                json!({
                    "jsonrpc": "2.0",
                    "id": id,
                    "result": tools
                })
            },
            "tools/call" => {
                let tool_name = params.get("name").and_then(|n| n.as_str()).unwrap_or("");
                let tool_args = params.get("arguments").cloned().unwrap_or(json!({}));
                match dispatch_tool(tool_name, &tool_args) {
                    Ok(result) => json!({
                        "jsonrpc": "2.0",
                        "id": id,
                        "result": {
                            "content": [{ "type": "text", "text": serde_json::to_string(&result).unwrap_or_default() }]
                        }
                    }),
                    Err(e) => json!({
                        "jsonrpc": "2.0",
                        "id": id,
                        "result": {
                            "isError": true,
                            "content": [{ "type": "text", "text": e }]
                        }
                    }),
                }
            },
            "notifications/initialized" | "notifications/cancelled" => continue,
            _ => json!({
                "jsonrpc": "2.0",
                "id": id,
                "error": { "code": -32601, "message": format!("Method not found: {}", method) }
            }),
        };

        writeln!(stdout, "{}", response).ok();
        stdout.flush().ok();
    }
}
