crates/vox-integration-tests/tests/snapshots/codegen_rust_test__with_all_options_output.snap
---
source: crates/vox-integration-tests/tests/codegen_rust_test.rs
expression: output
---
use serde::{Serialize, Deserialize};

pub fn as_string<T: serde::Serialize>(v: &T) -> String {
    let val = serde_json::to_value(v).expect("vox codegen: serde_json::to_value failed");
    if let Some(s) = val.as_str() { return s.to_string(); }
    if val.is_f64() {
        if let Some(f) = val.as_f64() {
            if f.is_finite() && f.fract() == 0.0 { return format!("{}", f as i64); }
        }
    }
    val.to_string()
}

fn f() -> i64 {
    let x = vox_actor_runtime::execute_activity_result("activity", &vox_actor_runtime::ActivityOptions::new().with_retries(5i64 as u32).with_timeout(vox_actor_runtime::ActivityOptions::parse_duration("30s").expect("vox codegen: activity timeout duration")).with_activity_id("unique-xyz".to_string()).with_backoff_multiplier(2i64 as f64), || async { 1i64 }).await;
    return x;
}
